--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: 博客
-description: Hanuman is a minimal yet powerful Jekyll theme for your blogs and websites.
+title: 学习日志
+description: 
 cover: assets/images/radhakrishna.jpg
 logo: assets/images/logo.png
 favicon: assets/images/favicon.png
